--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -31,7 +31,7 @@
 .article-title
   text-decoration: none
   font-size: 2em
-  font-weight: bold
+  font-weight: thin
   color: color-default
   line-height: line-height-title
   transition: color 0.2s
@@ -47,7 +47,8 @@
     line-height: line-height
     margin: line-height 0
   h1, h2, h3, h4, h5, h6
-    font-weight: bold
+    font-weight: thin
+    text-shadow: 0 1px #aaf
   h1, h2, h3, h4, h5, h6
     line-height: line-height-title
     margin: line-height-title 0
@@ -71,7 +72,7 @@
     border-collapse: collapse
     border-spacing: 0
   th
-    font-weight: bold
+    font-weight: thin
     border-bottom: 3px solid color-border
     padding-bottom: 0.5em
   td
@@ -216,7 +217,7 @@
   letter-spacing: 2px
   color: color-border
   line-height: 1em
-  font-weight: bold
+  font-weight: thin
   #article-nav-newer &
     margin-right: -2px
 
