--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -5,12 +5,12 @@ vendor-prefixes = webkit moz ms official
 // Colors
 color-default = #555
 color-grey = #999
-color-border = #ddd
+color-border = #adcff0
 color-link = #258fb8
-color-background = #eee
+color-background = #f0f0ff
 color-sidebar-text = #777
-color-widget-background = #ddd
-color-widget-border = #ccc
+color-widget-background = #dee8fc
+color-widget-border = #adcff0
 color-footer-background = #262a30
 color-mobile-nav-background = #191919
 color-twitter = #00aced
@@ -19,11 +19,11 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
+font-sans = Arial, Fira Sans, Arial, sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
-font-icon-path = "fonts/fontawesome-webfont"
+font-icon-path = "fonts/"
 font-icon-version = "4.0.3"
 font-size = 14px
 line-height = 1.6em
