--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -23,7 +23,7 @@ font-sans = Arial, Fira Sans, Arial, sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
-font-icon-path = "fonts/"
+font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
 font-size = 14px
 line-height = 1.6em
